# Bloodwork

./: README.md
abo-rh-compat-runtime/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLIC_README.md  README.md  REPO_SETUP.md  docker-compose.yml
abo-rh-compat-runtime/backend/rust/abo_api/: Cargo.toml
abo-rh-compat-runtime/backend/rust/abo_api/src/: lib.rs  main.rs
abo-rh-compat-runtime/backend/rust/abo_api/tests/: http_example.rs
abo-rh-compat-runtime/neuro_nanoswarm_service/: Cargo.toml  Makefile  README.md
abo-rh-compat-runtime/neuro_nanoswarm_service/.github/workflows/: ci.yml
abo-rh-compat-runtime/neuro_nanoswarm_service/ci/: local-ci.ps1
abo-rh-compat-runtime/neuro_nanoswarm_service/migrations/: 20250101090000_init.down.sql  20250101090000_init.up.sql
abo-rh-compat-runtime/neuro_nanoswarm_service/scripts/: ci-local.sh
abo-rh-compat-runtime/neuro_nanoswarm_service/src/: http.rs  lib.rs  main.rs
abo-rh-compat-runtime/neuro_nanoswarm_service/src/domain/: mod.rs  volume.rs
abo-rh-compat-runtime/neuro_nanoswarm_service/src/domain/ar/: mod.rs
abo-rh-compat-runtime/neuro_nanoswarm_service/src/domain/cal/: mod.rs
abo-rh-compat-runtime/neuro_nanoswarm_service/src/infrastructure/: db.rs  mod.rs  repository.rs  service.rs
abo-rh-compat-runtime/neuro_nanoswarm_service/src/infrastructure/ar/: repository.rs
abo-rh-compat-runtime/neuro_nanoswarm_service/tests/: ar_and_wireless_routes.rs  calibration_descriptor_routes.rs  healthcheck.rs  volume_domain_tests.rs  volume_persistence_tests.rs
aln/: nanoswarm_node_validation.aln
(+41 files in other folders)
