[package]
name = "abo_api"
version = "0.1.0"
edition = "2021"

[dependencies]
abo_core = { path = "../abo_core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
